--- a/biome.json
+++ b/biome.json
@@ -7,10 +7,11 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["dist", "node_modules"]
+    "ignore": ["node_modules"]
   },
   "formatter": {
     "enabled": true,
+    "lineWidth": 120,
     "indentStyle": "space"
   },
   "organizeImports": {
